@@ -1,6 +1,13 @@
 2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
 
-	* grub-core/partmap/sun.c (grub_sun_is_valid): make argument uint16_t *
+	* grub-core/partmap/sunpc.c (grub_sun_is_valid): Make argument
+	uint16_t * to ensure alignment.
+	(sun_pc_partition_map_iterate): Make `block' a union to ensure
+	alignment.
+
+2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/partmap/sun.c (grub_sun_is_valid): Make argument uint16_t *
 	to ensure alignment.
 	(sun_partition_map_iterate): Make `block' a union to ensure alignment.
 
